source_c = \
	$(NULL)

source_h = \
	garray.h		\
	glib.h			\
	gmacros.h		\
	gmem.h			\
	gmessages.h		\
	gslice.h		\
	gthread.h		\
	gtypes.h		\
	gutils.h		\
	$(NULL)

EXTRA_DIST = \
	$(source_c)		\
	$(source_h)		\
	$(NULL)

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = Makefile.in
